--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
-allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
@@ -114,6 +113,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 137.184.197.55;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.11.25.44;
@@ -140,6 +140,7 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.186.70;
 allow 154.213.187.66;
+allow 154.213.187.98;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
@@ -618,7 +619,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -897,6 +898,7 @@ allow 212.73.134.204;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
+allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.79.189.239;
@@ -1023,6 +1025,7 @@ allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1351,12 +1354,12 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:b0c7:6e37::1;
-allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1550,8 +1553,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1673,6 +1676,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1765,7 +1769,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
