--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -118,6 +118,7 @@ allow 130.193.15.79;
 allow 137.184.197.55;
 allow 138.59.18.110;
 allow 139.99.172.11;
+allow 139.99.8.57;
 allow 141.11.25.44;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -135,6 +136,10 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.185.133;
+allow 154.213.185.165;
+allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.186.70;
 allow 154.213.187.66;
@@ -263,6 +268,7 @@ allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
+allow 185.157.161.143;
 allow 185.165.169.239;
 allow 185.165.171.14;
 allow 185.165.171.84;
@@ -616,7 +622,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -979,6 +985,7 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -988,6 +995,7 @@ allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
+allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
@@ -1351,7 +1359,11 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:b0c7:6e37::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1545,8 +1557,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1597,7 +1609,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:10::b919:4e1;
-allow 2a10:1fc0:10::c5e8:64c6;
 allow 2a10:1fc0:10::debc:26b9;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1844,7 +1855,6 @@ allow 84.239.46.144;
 allow 84.247.165.51;
 allow 85.158.108.52;
 allow 85.239.41.130;
-allow 85.239.55.217;
 allow 85.93.218.204;
 allow 87.106.98.81;
 allow 87.118.110.27;
