--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -908,6 +908,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
