--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -137,7 +137,12 @@ deny 149.56.22.133;
 deny 149.56.44.47;
 deny 15.204.238.148;
 deny 154.16.116.61;
+deny 154.213.185.133;
+deny 154.213.185.165;
+deny 154.213.185.183;
+deny 154.213.185.185;
 deny 154.213.185.230;
+deny 154.213.185.254;
 deny 154.213.187.66;
 deny 154.213.187.98;
 deny 154.26.159.157;
@@ -1259,7 +1264,6 @@ deny 27.255.75.198;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
-deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1351,7 +1355,11 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -1546,6 +1554,7 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -1855,7 +1864,6 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
-deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
