--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,6 +107,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
+allow 116.48.51.219;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 123.253.35.32;
@@ -270,6 +271,7 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -576,6 +578,7 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.142.146.139;
 allow 193.142.147.233;
 allow 193.142.147.69;
 allow 193.189.100.194;
@@ -1590,6 +1593,7 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:596c::1;
 allow 2a0f:85c1:356:5da3::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1713,8 +1717,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.148.10.111;
-allow 45.148.10.169;
 allow 45.149.204.78;
 allow 45.151.122.34;
 allow 45.61.185.172;
@@ -1772,6 +1774,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1838,7 +1841,6 @@ allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.22.218;
 allow 80.82.78.14;
-allow 80.94.92.106;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1932,4 +1934,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.244.28;
 allow 96.126.98.146;
+allow 96.66.15.152;
 allow 98.128.173.33;
