--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -704,6 +704,7 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:596c::1;
 deny 2a0f:85c1:356:5da3::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
