--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -380,6 +380,7 @@ deny 2620:95:4007::111;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -693,7 +694,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
-deny 2a0e:4005:1002:ffff:185:40:4:84;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
